<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"
        android:scaleType="fitCenter"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_primary"
        android:textSize="45sp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/sign_up_heading"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:hint="@string/enter_your_email"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:text="@string/submit"/>

</LinearLayout>