<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"
        android:scaleType="fitCenter"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_email"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/otp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_otp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@color/white"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:textColor="@color/design_default_color_primary"
            android:text="@string/signup"/>

    </LinearLayout>

</LinearLayout>